fix: change icon path and fonts paths

--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,8 @@
   font-style: normal;
   font-weight: 600;
   src: local('MontserratSemibold'), local('Montserrat-Semibold'),
-    url(../fonts/Montserrat-SemiBold.woff) format('woff'),
-    url(../fonts/Montserrat-SemiBold.woff2) format('woff2');
+		url(assets/fonts/Montserrat-SemiBold.woff) format('woff'),
+			url(assets/fonts/Montserrat-SemiBold.woff2) format('woff2');
 }
 
 @font-face {
@@ -25,8 +25,8 @@
   font-style: normal;
   font-weight: 700;
   src: local('MontserratBold'), local('Montserrat-Bold'),
-    url(../fonts/Montserrat-Bold.woff) format('woff'),
-    url(../fonts/Montserrat-Bold.woff2) format('woff2');
+		url(assets/fonts/Montserrat-Bold.woff) format('woff'),
+			url(assets/fonts/Montserrat-Bold.woff2) format('woff2');
 }
 
 @font-face {
@@ -35,8 +35,8 @@
   font-style: normal;
   font-weight: 800;
   src: local('MontserratExtrabold'), local('Montserrat-Extrabold'),
-    url(../fonts/Montserrat-ExtraBold.woff) format('woff'),
-    url(../fonts/Montserrat-ExtraBold.woff2) format('woff2');
+		url(assets/fonts/Montserrat-ExtraBold.woff) format('woff'),
+			url(assets/fonts/Montserrat-ExtraBold.woff2) format('woff2');
 }
 
 /* common */
